2013-01-02  Jason Merrill  <jason@redhat.com>

	PR c++/54325
	* call.c (build_new_method_call_1): Don't use build_value_init for
	user-provided default constructors.

	PR c++/55032
	PR c++/55245
	* tree.c (build_cplus_array_type): Copy layout information
	to main variant if necessary.

2012-12-19  Jason Merrill  <jason@redhat.com>

	PR c++/55724
	* pt.c (type_unification_real): Re-combine post-deduction loops.

2012-12-11  Jason Merrill  <jason@redhat.com>

	PR c++/54883
	* decl2.c (min_vis_r): Handle anon visibility for enums.

2012-12-11  Jakub Jelinek  <jakub@redhat.com>

	PR c++/55643
	* expr.c (mark_exp_read): Handle FLOAT_EXPR similarly to NOP_EXPR.

2012-12-07  Jason Merrill  <jason@redhat.com>

	PR c++/55419
	* tree.c (build_target_expr): Don't set TREE_CONSTANT.

2012-12-07  Matthias Klose  <doko@ubuntu.com>

	* tree.c (build_aggr_init_expr): Add parameter name, mark as unused.

2012-12-06  Jason Merrill  <jason@redhat.com>

	PR c++/54325
	* tree.c (build_aggr_init_expr): Don't check for abstract class.
	(build_cplus_new): Check here instead.

	PR c++/55058
	* pt.c (tsubst): Keep the quals when looking through a typedef.

	PR c++/55249
	* tree.c (build_vec_init_elt): Use the type of the initializer.

	PR c++/54744
	* pt.c (resolve_typename_type): Check TYPENAME_IS_RESOLVING_P on scope.

	PR c++/54947
	* parser.c (cp_parser_initializer_list): Don't require an
	expression in [] to be constant until we know it's a C99
	designator.

	PR c++/55015
	PR c++/53821
	* semantics.c (maybe_add_lambda_conv_op): Revert earlier change.
	* decl.c (start_preparsed_function): Make local class methods comdat
	in templates, too.

2012-11-29  Jason Merrill  <jason@redhat.com>

	PR c++/53137
	* pt.c (tsubst_expr) [DECL_EXPR]: Set LAMBDA_EXPR_THIS_CAPTURE here.
	(tsubst_copy_and_build) [LAMBDA_EXPR]: And clear it here.
	(instantiate_class_template_1): Not here.

	PR c++/53862
	* pt.c (tsubst_arg_types): Add "end" parameter.
	(check_undeduced_parms): Use it.

	PR c++/53039