@@ -1,3 +1,8 @@
+2013-01-03  Jason Merrill  <jason@redhat.com>
+
+	PR c++/55856
+	* semantics.c (build_data_member_initialization): Handle DECL_EXPR.
+
 2013-01-02  Jason Merrill  <jason@redhat.com>
 
 	PR c++/54325
